// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`highlights all tokens 1`] = `
<div>
  <span
    class="sr-only"
  >
    foo bar foo bar
  </span>
  <span
    aria-hidden="true"
  >
    foo 
    <mark>
      bar
    </mark>
     foo 
    <mark>
      bar
    </mark>
  </span>
</div>
`;

exports[`highlights existing value 1`] = `
<div>
  <span
    class="sr-only"
  >
    foo bar foo bar
  </span>
  <span
    aria-hidden="true"
  >
    foo 
    <mark>
      bar
    </mark>
     foo 
    <mark>
      bar
    </mark>
  </span>
</div>
`;

exports[`highlights the start of tokens 1`] = `
<div>
  <span
    class="sr-only"
  >
    "barfoo"
  </span>
  <span
    aria-hidden="true"
  >
    "
    <mark>
      bar
    </mark>
    foo"
  </span>
</div>
`;

exports[`inverses the highlight 1`] = `
<div>
  <span
    class="sr-only"
  >
    foo bar foo bar
  </span>
  <span
    aria-hidden="true"
  >
    <mark>
      foo 
    </mark>
    bar
    <mark>
       foo 
    </mark>
    bar
  </span>
</div>
`;
